css/style.css
html, body {
	height: 100%;
}
body {
	padding-top: 50px;
}
#wrapper {
	min-height: 100%;
	height: auto;
	margin: 0 auto -60px;
	padding: 0 0 60px;
}
#footer {
	height: 60px;
	background-color: #f5f5f5;
}
#home sup {
	vertical-align: top;
	position: relative;
	top: 0.3em;
	font-size: 0.5em;
}
#layer-form {
	padding: 40px 15px;
}
.container .credit {
	margin: 20px 0;
}
.kbd-info {
	padding-top: 7px;
}
#kbd-info {
	color: #2f6f9f;
	border-bottom: 1px dotted #999;
}
#notification {
	position: fixed;
	left: 0;
	top: 0;
	z-index: 1050;
	width: 100%;
	background-color: #f0ad4e;
	background-image: repeating-linear-gradient( 135deg, transparent, transparent 8px, rgba(0, 0, 0, .8) 8px, rgba(0, 0, 0, .8) 16px );
	box-shadow: 0 4px 3px 0 #000;
}
#notification-inner {
	background: #fcf8e3;
	padding: 3px 0;
	margin: 4px 0;
	text-align: center;
	font-size: 0.8em;
}
#dl_c,
#dl_eep {
	margin-bottom: 15px;
}
.fn-action {
	float: left;
	padding: 0 2px 0 15px;
}
#fn0 .col-md-1,
#fn1 .col-md-1 {
	padding: 0 2px;
}
.fn-action label.checkbox {
	padding-top: 0;
}

.multiselect-container {
	max-height: 200px;
	overflow-y: scroll;
}
.multiselect-container input[type="radio"] {
	display: none;
}
.multiselect-container .radio {
	padding-top: 0;
}
.multiselect-container .multiselect-group {
	white-space: nowrap;
}

.multiselect-group {
	text-decoration: underline;
}

